Updated app settings for swagger

--- a/Herlitz.BankID/appsettings.json
+++ b/Herlitz.BankID/appsettings.json
@@ -12,7 +12,21 @@
     "ServerCertificateThumbprint": "B581B136673317A3422D2E4B4F6BF3F77AF34798",
     "RPCertificateThumbprint": "5CA383FACF7C2E3AC7EB317EAFF567DA0805FFA7",
     "ApiUrl": "https://appapi2.test.bankid.com/rp/v5",
-    "CertificatePolicies": ["1.2.3.4.25", "1.2.3.4.5"],
-    "AllowFingerprint":  true 
+    "CertificatePolicies": [ "1.2.3.4.25", "1.2.3.4.5" ],
+    "AllowFingerprint": true
+  },
+  "OrderCaching": {
+    "Allow": true,
+    "Timeout": 600
+  },
+  "OpenApiInfo": {
+    "Title": "Herlitz BankID API",
+    "Description": "API for BankID services",
+    "Version": "1.0",
+    "Contact": {
+      "Name": "The owner",
+      "Email": "whomever@what.com",
+      "Url": "https://github.com/EricHerlitz/Swedish-BankID-.NET-Core"
+    }
   }
 }
