Added libgdiplus to docker Added QRCode pixel setting

--- a/Herlitz.BankID/appsettings.json
+++ b/Herlitz.BankID/appsettings.json
@@ -13,7 +13,8 @@
     "RPCertificateThumbprint": "9312D6E82CAA742E5210293F333C397B02733425",
     "ApiUrl": "https://appapi2.test.bankid.com/rp/v5.1",
     "CertificatePolicies": [ "1.2.3.4.25", "1.2.3.4.5" ],
-    "AllowFingerprint": true
+    "AllowFingerprint": true,
+    "QRPixels":  10
   },
   "CacheOptions": {
     "Allow": false,
