--- a/Herlitz.BankID/Dockerfile
+++ b/Herlitz.BankID/Dockerfile
@@ -1,6 +1,8 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
+# add libgdiplus for QR support
+RUN apt-get update && apt-get install -y libgdiplus
 WORKDIR /app
 #EXPOSE 80
 EXPOSE 443
