--- a/Herlitz.BankID/appsettings.json
+++ b/Herlitz.BankID/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApplicationInsights": {
-    "InstrumentationKey": "a99af61e-03db-4a58-99f6-78fdfad73461"
+    "InstrumentationKey": ""
   },
   "Logging": {
     "LogLevel": {
